# mcp-hello-world

./: .gitignore  README.md  pyproject.toml  server.py
aladdin/: README.md  pyproject.toml  setup_oauth.py
aladdin/mcp_server/: aladdin_client.py  auth.py  config.py  main.py  plugin_discovery.py  rest_client.py
aladdin/mcp_server/models/: schemas.py
aladdin/mcp_server/swagger/: OrderAPI_api.json  studio_notification_api.json  studio_subscription_api.json  token_api.json  train_journey_api.json
aladdin/mcp_server/tools/: abor_lot_tools.py  account_info_tools.py  adc_dataset_tools.py  adc_tools.py  analyst_coverage_tools.py  api_tools.py  audit_tools.py  broker_confirm_routing_tools.py  broker_desk_tools.py  broker_external_alias_tools.py  broker_tools.py  cash_ladder_tools.py  cid_reader_tools.py  cid_writer_tools.py  climate_tools.py  collateral_statement_tools.py  compliance_rule_assignment_tools.py  compliance_rule_tools.py  composite_membership_tools.py  contact_tools.py  corporate_action_entitlement_tools.py  corporate_action_tools.py  counter_party_settlement_instruction_template_tools.py  counter_party_settlement_instruction_tools.py  coupon_reset_tools.py  criterion_tools.py  engagement_tools.py  enriched_capital_flow_tools.py  esg_data_tools.py  evaluator_analytics_tools.py  level_tools.py  miscellaneous_cashflow_tools.py  order_tools.py  permission_tools.py  portfolio_configuration_tools.py  portfolio_group_tools.py  portfolio_toolkit_tools.py  principal_interest_factor_tools.py  research_note_tools.py  restricted_asset_tools.py  (+21 more)
docs/: OAUTH_SETUP.md  SETUP_GUIDE.md
