[project]
name = "aladdin-mcp-server"
version = "0.1.0"
description = "MCP server exposing BlackRock Aladdin API capabilities to AI assistants"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "loguru>=0.7.3",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
adc = [
    "snowflake-connector-python>=3.6.0",
    "pandas>=2.0.0",
]

[project.scripts]
aladdin-mcp = "mcp_server.main:main"
aladdin-setup-oauth = "setup_oauth:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
