[project]
name = "aladdin-mcp-server"
version = "0.2.0"
description = "MCP server exposing BlackRock Aladdin capabilities via direct REST APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "loguru>=0.7.3",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "snowflake-connector-python>=3.6.0",
]

[project.scripts]
aladdin-mcp = "mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
